storing task id for delete listener